--- a/videos/index.html
+++ b/videos/index.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <title>VIDEOS</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div id="page">
-        <header>
-           <h1>Gallery</h1> 
-        </header>
-        <main>
-            <ul>
-                <li> <img src="https://picsum.photos/id/10/150/100" alt=""></li> 
-                <li> <img src="https://picsum.photos/id/20/150/100" alt=""></li>
-                <li> <img src="https://picsum.photos/id/30/150/100" alt=""></li>
-            </ul>
-            <div id="outlet"></div>
-        </main>
-        <footer>
-            Copyright &copy; 2022
-        </footer>
-    </div>
     <script src="scripts/main.js"></script>
 </body>
 </html>
