--- a/videos/index.html
+++ b/videos/index.html
@@ -42,25 +42,25 @@
         <div>
           <label>
             E-mail:
-            <input type="text" placeholder="E-mail" />
+            <input type="text" name="email" placeholder="E-mail" />
           </label>
         </div>
         <div>
           <label>
             Hasło:
-            <input type="text" placeholder="Hasło" />
+            <input type="text" name="password" placeholder="Hasło" />
           </label>
         </div>
         <div>
           <label>
             Imię:
-            <input type="text" placeholder="Imię" />
+            <input type="text" name="name" placeholder="Imię" />
           </label>
         </div>
         <div>
           <label>
             Nazwisko:
-            <input type="text" placeholder="Nazwisko" />
+            <input type="text" name="surname" placeholder="Nazwisko" />
           </label>
         </div>
         <button type="submit">Zarejestruj się</button>
@@ -72,13 +72,13 @@
         <div>
           <label>
             E-mail:
-            <input type="text" placeholder="E-mail" />
+            <input type="text" name="email" placeholder="E-mail" />
           </label>
         </div>
         <div>
           <label>
             Hasło:
-            <input type="text" placeholder="Hasło" />
+            <input type="text" name="password" placeholder="Hasło" />
           </label>
         </div>
         <button type="submit">Zaloguj się</button>
@@ -114,6 +114,15 @@
         <p>Copyright 2022 &copy;</p>
       </footer>
     </div>
+    
+    <script src="scripts/videos.js"></script>
+    <script src="scripts/components/component.js"></script>
+    <script src="scripts/components/homepage.component.js"></script>
+    <script src="scripts/components/registration.component.js"></script>
+    <script src="scripts/components/login.component.js"></script>
+    <script src="scripts/components/not-found.component.js"></script>
+    <script src="scripts/services/user.service.js"></script>
+    <script src="scripts/routing.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
